# Watchers

./: Cargo.toml  README.md  flake.nix  platformio.ini
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: verify-pr-commit.yml  verify-reuse-compliance.yml
docs/: README.md
scripts/: flash.sh  run-wokwi.sh
src/: main.rs
test/: Cargo.toml
watchers_lib/: Cargo.toml
watchers_pinetime/: Cargo.toml  memory.x  rust-toolchain.toml
watchers_pinetime/.cargo/: config.toml
watchers_pinetime/src/: main.rs
watchers_watchy/: Cargo.toml  default.nix  memory.x  rust-toolchain.toml
watchers_watchy/.cargo/: config.toml
watchers_watchy/src/: main.rs
