[package]
name = "watchers"
version = "0.1.0"
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
edition = "2021"
resolver = "2"

[dependencies]

esp-idf-sys = { version = "0.33.7", features = ["binstart"] }
esp-idf-hal = "0.42.5"
esp-idf-svc = "0.47.3"

epd-waveshare = { version = "0.5.0", default-features = false }

embassy-sync = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-executor = { version = "0.3.3", git = "https://github.com/embassy-rs/embassy", features = ["nightly", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.2", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-embedded-hal = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy" }

defmt = "0.3"
defmt-rtt = "0.4"

embedded-hal = "0.2.7"
embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-rc.1" }
embedded-hal-async = { version = "=1.0.0-rc.1" }

panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.29", default-features = false, features = ["async-await"] }
heapless = { version = "0.8.0", default-features = false }
chrono = { version = "^0.4", default-features = false }

[build-dependencies]
embuild = "0.31.4"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"
