[workspace]
default-members = [ "watchers_lib" ]
members = [
    "watchers_lib",
    "watchers_pinetime",
    "watchers_watchy",
]
resolver = "2"

[profile.dev]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
