[package]
edition = "2021"
name = "watchers_pinetime"
version = "0.1.0"
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
resolver = "2"

[dependencies]
cortex-m = { version = "0.7.7" }
cortex-m-rt = "0.7.3"
defmt = "0.3"
defmt-rtt = "0.4"
embassy-executor = { version = "0.6.0", features = ["task-arena-size-1024", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers", "executor-interrupt"] }
embassy-nrf = { version = "0.2.0", features = ["defmt", "nrf52832", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
embassy-sync = { version = "0.6.0" }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime"] }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
watchers_lib = { path = "../watchers_lib" }
